Updated CV info index.html

--- a/index.html
+++ b/index.html
@@ -2,57 +2,68 @@
 <head>
     <meta charset="UTF-8">
     <title>Jacob Aragao's Website</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <table cellspacing="15">
         <tr>
-            <td><img src="IMG_0116.jpeg" alt="Jacob's Photo" height="400" width="300"></td>
+            <td><img src="images/IMG_0116.jpeg" alt="Jacob's Photo" height="400" width="300"></td>
             <td><h1>Jacob Aragao</h1>
                 <p><em>University of Mcgill</em> 
                 <br>    
-                <strong>Software Engineering Undergraduate Student</strong></p>
+                <strong>Software Engineering Undergraduate Student</strong>
+                <br>
+                </p>
+                <a href="https://github.com/Jacoba91">Github</a>
+                <a href="https://www.linkedin.com/in/jacob-aragao-710664255/">LinkedIn</a></p>
                 </td>
         </tr>
     </table>
-    <p><em>"Hardworking and passionate student/co-op seeker with strong organizational skills eager to secure entry-level programming position. Motivated to help team achieve company vision."</em></p>
+    <p><em>"Hardworking and passionate 2nd-year student with strong organizational skills seeking a 4-month co-op position in a software development related role. Recognized for consistently delivering high-quality results on challenging tasks with meticulous attention to detail. Comfortable with communication in English or French."</em></p>
     
-    <hr size="3" noshade="">
+    <hr>
     <h2>Education</h2>
-    <hr size="3" noshade="">
+    <hr>
     <ul>
         <li><p><strong><a href="https://www.mcgill.ca/about/">Mcgill University</a></strong></p></li>
-        <p>AUGUST 2022 - APRIL 2027, MONTREAL, QC.</p>
+        <p>AUGUST 2022 - DECEMBER 2027, MONTREAL, QC.</p>
         <li><p><strong><a href="https://www.tcdsb.org/o/fatherjohnredmond/page/about-us">Father John Redmond High School</a></strong></p></li>
         <p>SEPT 2018 - JUNE 2022, TORONTO, ON.</p>
     </ul>
 
-    <hr size="3" noshade="">
+    <hr>
     <h2>Work Experience</h2>
-    <hr size="3" noshade="">
+    <hr>
     <ul>
-        <li><p><strong><a href="http://homeandcastlelawfirm.com/?no_redirect=true">Home and Castle Law Firm</a> / Accounting Assistant</strong></p></li>
-        <p>JULY 2019 - PRESENT,  TORONTO, ON.</p>
-        <p>Gained accounting experience via use of law practice management software "PCLaw". Used critical thinking to summarize legal claims and evaluate relevant data.</p>
+        <li><p><strong><a href="https://techbytesfoundation.org/">Tech Bytes Foundation</a> / Data Science & Machine Learning Intern</strong></p></li>
+        <p>APRIL 2023 - PRESENT,  REMOTE</p>
+        <p>Worked as a data science / machine learning intern at Techbytes foundation. Gained over 240 hours of relevant field experience.</p>
     </ul>
 
-    <hr size="3" noshade="">
+    <ul>
+        <li><p><strong><a href="http://homeandcastlelawfirm.com/?no_redirect=true">Home and Castle Law Firm</a> / Accounting Assistant</strong></p></li>
+        <p>JULY 2019 - AUGUST 2023,  TORONTO, ON.</p>
+        <p>Gained accounting experience via use of law practice management software "PCLaw". Used critical thinking to summarize legal claims by analyzing data.</p>
+    </ul>
+
+    <hr>
     <h2>Volunteer Work</h2>
-    <hr size="3" noshade="">
+    <hr>
     <ul>
         <li><strong>Peer Tutoring Program at FJR</strong></li>
-        <p>Provided free tutoring in Math, Science and Language courses. Aided multiple students in achieving higher grades and alleviated academic anxiety through high school peer tutoring program.</p>
+        <p>Provided free tutoring at my high school in Math, Science and Language courses. Aided multiple students in achieving higher grades and alleviated academic anxiety through high school peer tutoring program.</p>
         <li><strong>Minor Ball Hockey Coaching</strong></li>
         <p>Coached/supervised youth ball hockey teams for a community league (<a href="https://www.embhl.ca/embhl/AboutUs">EMBHL</a>) resulting in multiple successful and enjoyable seasons.</p>
         <li><strong>Youth Soccer League Coaching</strong></li>
         <p>Assistant coached a team of talented young soccer players in my community through the <a href="https://etobicokeyouthsoccer.squarespace.com/">EYSL</a>.</p>
     </ul>
-
-    <hr size="3" noshade="">
+<!--
+    <hr>
     <h2>Extra</h2>
-    <hr size="3" noshade="">
+    <hr>
     <p>Here are a few of <a href="Hobbies.html">my interests</a> outside of work/school.</p>
     <p><a href="Contact-me.html">Contact me</a></p>
-
+-->
 </body>
 
 </html>
