Update index.html add e-mail

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
                 <br>
                 </p>
                 <a href="https://github.com/Jacoba91">Github</a>
-                <a href="https://www.linkedin.com/in/jacob-aragao-710664255/">LinkedIn</a></p>
+                <a href="https://www.linkedin.com/in/jacob-aragao-710664255/">LinkedIn</a>
+                <br>
+                jacob.aragao@mail.mcgill.ca</p>
                 </td>
         </tr>
     </table>
@@ -63,7 +65,6 @@
     <hr>
     <p>Here are a few of <a href="Hobbies.html">my interests</a> outside of work/school.</p>
     <p><a href="Contact-me.html">Contact me</a></p>
--->
+    -->
 </body>
 
-</html>
